feat: Java 21 upgrade, real-backend e2e, and three bug fixes
- Upgrade Java 11 -> 21: pom, Dockerfile, compose test image, CI
  setup-java, and Lambda runtimes (java21)
- Clear all IntelliJ inspections: JPA datasource fixed to dev_db,
  Optional/lambda/style warnings resolved across main and tests
- Add OrdersController: local /orders gateway that feeds real Lambda
  handlers over HTTP, so local/e2e exercise the deployed code path
- Rewrite e2e as true end-to-end (browser -> local app -> real
  handlers -> Postgres/Redis); CI e2e job now boots the backend
- fix(lambda): exception details now carry plain string summaries
  instead of JPA entities - plain ObjectMapper (no JavaTimeModule)
  could not serialize Instant fields and returned 500
  "serialization error" on any block/warning response
- fix(dedup): store opposing_party as "" (not NULL) so the same-day
  duplicate check, which queries with "", can actually match rows
- fix(clients): normalize empty clientIdNumber to NULL before save -
  the second client without an ID number hit the unique id_number
  constraint (form always sends "", NULL is allowed multiple times)